--- a/main.yml
+++ b/main.yml
@@ -1,17 +1,11 @@
-name: build
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  workflow_dispatch:
-
 jobs:
-  build:
+  compile:
+    
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - run: docker-compose build --parallel
+      - uses: suleohis/curl@v3
+        with: 
+            image: ghcr.io/aad-for-linux/pam_aad:ubuntu
+            run: |
+                 make
