--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,5 @@ jobs:
       - uses: actions/checkout@v2
         with: 
             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
-            run: make -d/
+            run: |
+                 make -d
