--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./
+      - uses: addnab/docker-run-action@v3
         with: 
             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
-            run: |
-                 make -d
+            run: make -d
