--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile 
       - name: build application
-        with: 
-             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
-             run: "make" 
+        run: "make" 
