--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,6 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file Dockerfile 
       - name: build application
-        run: "make" 
+        with: 
+            image: ghcr.io/aad-for-linux/pam_aad:ubuntu
+            run: make -d
