--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
         with: 
             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
             run: |
-              cd home 
+              cd home/ohis//Documents/curl  
               ls
               make
