--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,11 @@
 
 
 name: CI
-
 on:
-
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
 
   workflow_dispatch:
 
@@ -25,4 +23,15 @@ jobs:
               ls 
               pwd
               make
-
+  volume-mount-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v2
+      - uses: addnab/docker-run-action@v3
+        with: 
+            image: ghcr.io/aad-for-linux/pam_aad:ubuntu
+            run: |
+              ls 
+              pwd
+              make
