--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,4 @@ jobs:
       - uses: addnab/docker-run-action@v3
         with: 
             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
-            run: |
-              ls run
-              pwd
-              make
+            run: docker run --DockerFile
