--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,16 @@ jobs:
               ls run
               pwd
               make
+              
+  volume-mount-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v2
+      - uses: addnab/docker-run-action@v3
+        with: 
+            image: ghcr.io/aad-for-linux/pam_aad:ubuntu
+            run: |
+              ls run
+              pwd
+              make
