--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,10 @@
 
 name: CI
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-
+ push:
+   branches: [ main ]
+ pull_request:
+   branches: [ main ]
 
 jobs:
   compile:
