--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,15 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
+      - name: build application
+        run: make build  
       - uses: addnab/docker-run-action@v3
         with: 
             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
             run: |
               ls 
               pwd
-              make all
+              make 
               
   volume-mount-test:
     runs-on: ubuntu-latest
@@ -35,4 +37,4 @@ jobs:
             run: |
               ls 
               pwd
-              make all
+              make 
