--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,9 @@ jobs:
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
-      - name: build application
-        run: make   
       - uses: addnab/docker-run-action@v3
         with: 
+            file: ./curl/Makefile
             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
             run: |
               ls 
