--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: addnab/docker-run-action@v3
         with: 
-            file: ./curl/Makefile
+            file: suleohis/curl/Makefile
             image: ghcr.io/aad-for-linux/pam_aad:ubuntu
             run: |
               ls 
